Create basic outline of calculator view Created the skeleton of the calculator, functionality to be implemented later.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class = "title">Calculator</div>
+    <div class = "container">
+        <div class = "output">
+            
+        </div>
+        <div class = "buttons">
+            <button class = "calcButton digit">1</button>
+            <button class = "calcButton digit">2</button>
+            <button class = "calcButton digit">3</button>
+            <button class = "calcButton operator">+</button>
+            <button class = "calcButton digit">4</button>
+            <button class = "calcButton digit">5</button>
+            <button class = "calcButton digit">6</button>
+            <button class = "calcButton operator">-</button>
+            <button class = "calcButton digit">7</button>
+            <button class = "calcButton digit">8</button>
+            <button class = "calcButton digit">9</button>
+            <button class = "calcButton operator">*</button>
+            <button class = "calcButton">CE</button>
+            <button class = "calcButton digit">0</button>
+            <button class = "calcButton">.</button>
+            <button class = "calcButton operator">/</button>
+            <button class = "calcButton">Back</button>
+            <button class = "calcButton operator">=</button>
+        </div>
+    </div>
 </body>
 </html>
